# rwkv-harness

./: .gitignore  AGENTS.md  ARCH.md  ARCHITECTURE.mdx  ARCH_DIFF.md  ARCH_QA.md  NEXT_STEPS.md  PLAN.md  TEMPLATE.md  TODO.md  TODO_PLAN.md  TODO_PROGRESS.md  _grammar-shape-check.mjs  agent.ts  check-grammar.ts  check-rendered.ts  inference-server.ts  package.json  patch-grammar.js  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
native/rwkv-bindings/: index.js  package.json
native/rwkv-bindings/rwkv-bindings/: Cargo.toml
native/rwkv-bindings/rwkv-bindings/src/: lib.rs
rust/: Cargo.toml
rust/crates/agent/: Cargo.toml
rust/crates/agent/src/: lib.rs
rust/crates/cache/: Cargo.toml
rust/crates/cache/src/: lib.rs
rust/crates/engine/: Cargo.toml
rust/crates/engine/src/: lib.rs
rust/crates/eval/: Cargo.toml
rust/crates/eval/src/: main.rs
rust/crates/grammar/: Cargo.toml
rust/crates/grammar/src/: gbnf.rs  grammar_helpers.rs  lib.rs  types.rs
rust/crates/grammar/tests/: grammar_test.rs
rust/crates/inference_daemon/: Cargo.toml
rust/crates/inference_daemon/src/: main.rs
rust/crates/logging/: Cargo.toml
rust/crates/logging/src/: lib.rs
rust/crates/sandbox/: Cargo.toml
rust/crates/sandbox/src/: lib.rs
rust/crates/server/: Cargo.toml
rust/crates/server/src/: lib.rs  main.rs
rust/crates/session/: Cargo.toml
rust/crates/session/src/: lib.rs
rust/crates/vectorstore/: Cargo.toml
rust/crates/vectorstore/src/: lib.rs
scripts/: bench-placement.sh  convert-rwkv.py  download-minicpm.sh  extract-examples.py  inference-start.sh  inject-story-frontmatter.ts  preview-grammar.ts
src/: cli.ts  test-native.ts  test3.ts  types.ts
src/agent/: loop.ts
src/agents/: agent-loader.ts  agent.test.ts  agent.ts  example-template.ts  examples.ts  format-config.ts  loop.ts
src/agents/coder/: instructions.mdx
src/agents/coder/tools/: index.ts
src/agents/default/: examples.jsonl  examples.mdx
src/agents/envoy/: examples.ts  index.ts  instructions.mdx
src/agents/envoy/examples/: spawn_dragon.jsonl  spawn_story.jsonl  spawn_story.txt
src/agents/envoy/tools/: index.ts
src/agents/storyteller/: examples.ts  frontmatter.test.ts  frontmatter.ts  index.ts  instructions.mdx
src/agents/storyteller/examples/: create_shadow.jsonl  create_shadow.txt  create_starfall.jsonl  create_starfall.txt  create_starfall_todo.jsonl  create_story.jsonl  create_tale.jsonl  create_tale.txt
src/agents/storyteller/examples/story-shadow/: _plan.md  _user.md  chapter-001.md  chapter-002.md  chapter-003.md
src/agents/storyteller/examples/story-shadow/wiki/character/: mara.md
src/agents/storyteller/examples/story-shadow/wiki/faction/: umbral-order.md
src/agents/storyteller/examples/story-shadow/wiki/location/: duskfall.md
src/agents/storyteller/examples/story-starfall/: _plan.md  _user.md  chapter-001.md  chapter-002.md  chapter-003.md
src/agents/storyteller/examples/story-starfall/wiki/character/: celeste.md
src/agents/storyteller/examples/story-starfall/wiki/faction/: observatory-council.md
src/agents/storyteller/examples/story-starfall/wiki/location/: starfall-crater.md
src/agents/storyteller/examples/story-tale/: _plan.md  _user.md  chapter-001.md  chapter-002.md  chapter-003.md
src/agents/storyteller/examples/story-tale/wiki/character/: lyra.md
src/agents/storyteller/examples/story-tale/wiki/faction/: ashen-council.md
src/agents/storyteller/examples/story-tale/wiki/location/: dragon-peak.md
src/agents/storyteller/tools/: index.ts  todo.ts
src/core/: agent-loop.ts  log-stream.test.ts  log-stream.ts  model-lock.ts  state-tune-cache.test.ts  state-tune-cache.ts  tool-registry.ts  trace-writer.ts  workspace.test.ts  workspace.ts
src/engine/: axum-engine.ts  axum-session.ts  engine-http-client.ts
src/eval/: agent-loop.eval.ts  cases.eval.ts  cases.ts  chapter-eval.ts  eval-controller.ts  examples.ts  format-strictness.test.ts  isekai-20ch.ts  live-grammar-debug.ts  loop-edge.eval.ts  max-token.eval.ts  mock-engine.ts  story-creation.eval.ts  storyteller-context-full.eval.ts  storyteller-context.eval.ts  trace-writer.test.ts  trace-writer.ts
src/eval/oracle/: chapter1.md
src/gateway/: control.ts  index.ts  server.ts
src/grammars/: eot_tool_call.gbnf  grammar-gen.test.ts  grammar-helpers.ts  grammar-invalid.test.ts  grammar-valid.test.ts
src/inference/: backend.ts  client.test.ts  client.ts  index.ts  protocol.ts  server.ts
src/model/: adapter-utils.ts  adapter.ts  axum-model.ts  http-model.ts  mose.ts  native-rwkv-model.ts  rwkv-model.ts  vram-residency.test.ts
src/protocol/: index.ts  message-part.test.ts  message-part.ts  response-template.ts
src/rpc/: client.ts  contract.ts  server.ts
src/session/: session-host.ts  session-manager.ts  session.test.ts  session.ts
src/test/: gbnf-runner.ts  gbnf.test.ts
src/tools/: bash.ts  ls.ts  registry.ts  tool.test.ts  tool.ts  write.ts  zod-to-json.ts
src/tools/utils/: zod-to-gbnf.ts  zod-to-json.ts
src/tui/: index.ts
src/web/: index.html
