[package]
name = "rwkv_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "rwkv_bindings"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["tokio"] }
napi-derive = "2"
web-rwkv = { path = "/tmp/web-rwkv" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
