[package]
name = "rwkv_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "rwkv_bindings"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt", "napi4", "napi6"] }
napi-derive = "2"
web-rwkv = { path = "/home/kit/extern/web-rwkv" }
safetensors = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "2"
memmap2 = "0.9.11"
rand = "0.8"
schoolmarm = "0.1.1"

[build-dependencies]
napi-build = "2"
