[package]
name = "vectorstore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "vectorstore-cli"
path = "src/bin/vectorstore-cli.rs"
